# rppico_usb_mass_storage

./: CMakeLists.txt  README.md  flash.sh  main.c  memfind.c  memfind.h  msc_disk.c  pico_hal.c  pico_hal.h  rebuild.sh  reset.sh  start_debug.sh  tusb_config.h  usb_descriptors.c
